# smsspam

./: .gitignore  README  README.md  START.sh  Setyp.py  fonovoy_rejim.sh  ini.sh  pyproject.toml  requirements.txt  setup.sh
app/: bot.py
app/handlers/: main.py
app/misc/: helper.py  modular.py  storage.py  upload.py
