[tool.poetry]
name = "Photos"
version = "0.2.0"
description = "A bot that uploads photos."
authors = ["Cicada3301"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
PyYAML = "^5.4.1"
rich = "^9.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
